<resources>
    <string name="app_name">Chat Games</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mail_user">Mail</string>
    <string name="user_phone">Phone</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="Search">Search</string>
    <string name="ProductList">Products List</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="birthDate_user">BirthDate</string>
    <string name="logout">Log out</string>
    <string name="title_ForYou">ForYou</string>
    <string name="title_Chat">ChatGroup</string>
    <string name="title_Setting">Setting</string>
    <string name="registrationNext">Next</string>
    <string name="registrationChooseCategory">Please Choose Your Catergory</string>
    <string name="registrationChoosePlatform">Please Choose Your Platform</string>
    <string name="profileAdd">Please Add Your Profile Photo</string>
    <string name="registrationDetails">Please Add Your Details</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="menu_bottom_user_finder">Users</string>

    <string name="menu_top_advance_search">Search</string>
    <string name="menu_top_create_chat">Create Chat</string>
    <string name="menu_top_setting">Setting</string>
</resources>