<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.fragment_RegisterStepTwo">


    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/background_registration">

        <TextView
            android:id="@+id/textViewSearchCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/registrationChooseCategory"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupChoiceGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewRegisterStepTwoConsole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/registrationChoosePlatform"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupPlatformChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">


        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/buttonRegisterNextStepTwo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/registrationNext" />

    </LinearLayout>
</FrameLayout>