<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".Fragments.fragment_SettingMenu">

    <LinearLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextSettingUserFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/inputuserfocus"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextSettingUserLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/inputuserfocus"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextSettingUserNickName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/inputuserfocus"
            android:ems="10"
            android:hint="Nick Name"
            android:inputType="text"
            android:textDirection="ltr" />

        <EditText
            android:id="@+id/editTextSettingUserPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/inputuserfocus"
            android:ems="10"
            android:hint="@string/user_phone"
            android:inputType="numberDecimal"
            android:textDirection="ltr" />

        <TextView
            android:id="@+id/textViewSettingUserPlatform_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/registrationChoosePlatform"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupSettingUserPlatformChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />
        </ScrollView>

        <TextView
            android:id="@+id/textViewSettingUserCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/registrationChooseCategory"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupSearchChoiceGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/buttonSettingPasswordOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/cardview_rectangle"
                android:padding="10dp"
                android:text="Change"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buttonSettingPasswordCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/cardview_rectangle"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="Cancle"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>