<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/layoutDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/cardview_rectangle"
            android:orientation="vertical"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewSearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="Please Enter A Name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextSettingPasswordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Search"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="@color/grayOpacity_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSearchCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/registrationChooseCategory"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupSearchChoiceGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />
            </ScrollView>

            <TextView
                android:id="@+id/textViewCreateChatDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/registrationChoosePlatform"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupSearchPlatformChoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/buttonSettingPasswordOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cardview_rectangle"
                    android:padding="10dp"
                    android:text="@string/Search"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/buttonSettingPasswordCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cardview_rectangle"
                    android:padding="10dp"
                    android:text="Cancle"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="512dp"
            android:background="@drawable/cardview_oval"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/layoutDialog"
            app:layout_constraintEnd_toEndOf="@+id/layoutDialog"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/layoutDialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>